--- a/janusgraph/files/default/janusgraph-pod.yaml
+++ b/janusgraph/files/default/janusgraph-pod.yaml
@@ -6,6 +6,8 @@
 apiVersion: v1
 kind: Pod
 metadata:
+  annotations:
+    seccomp.security.alpha.kubernetes.io/pod: localhost/seccomp.json
   labels:
     app: {{ JANUSGRAPH['projectname'] }}-janusgraph-pod
   name: {{ JANUSGRAPH['projectname'] }}-janusgraph-pod
