--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,11 @@ install:
   - curl -o bootstrap-salt.sh -L https://bootstrap.saltstack.com
   - sudo sh bootstrap-salt.sh -x python3 -P -c /tmp git v3003.1
   - sudo python3 -m pip install jinja2==2.11.3
+build_script:
+  - sudo cp -v .appveyor/etc/salt/minion /etc/salt/minion
+  - sudo cp -rv .appveyor/srv/pillar /srv/pillar
+  - sudo salt-call state.sls janusgraph
+  - sudo salt-call state.sls janusgraph.clean
 on_success:
   - wget https://raw.githubusercontent.com/creationix/nvm/v0.33.0/install.sh
   - sudo bash install.sh
