feat(network): add option to use Podman default network

--- a/janusgraph/files/default/janusgraph-pod.yaml
+++ b/janusgraph/files/default/janusgraph-pod.yaml
@@ -6,8 +6,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
+  {%- if JANUSGRAPH.janusgraph.use_seccomp %}
   annotations:
     seccomp.security.alpha.kubernetes.io/pod: localhost/seccomp.json
+  {%- endif %}
   labels:
     app: {{ JANUSGRAPH['projectname'] }}-janusgraph-pod
   name: {{ JANUSGRAPH['projectname'] }}-janusgraph-pod
