--- a/janusgraph/parameters/defaults.yaml
+++ b/janusgraph/parameters/defaults.yaml
@@ -11,6 +11,7 @@ values:
     group: vagrant
   pod:
     network:
+      use_podman_default_network: false
       subnet: 10.77.1.0/24
       gateway: 10.77.1.1
       domain_name: janusgraphnet
