--- a/pillar.example
+++ b/pillar.example
@@ -10,6 +10,7 @@ janusgraph:
       group: vagrant
     pod:
       network:
+        use_podman_default_network: false
         subnet: 10.77.1.0/24
         gateway: 10.77.1.1
         domain_name: janusgraphnet
